--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
+    "truffle-contract": "^4.0.6",
     "truffle-hdwallet-provider": "^1.0.4",
     "web3": "^1.0.0-beta.46"
   },
